welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: ')' expected but integer literal found.
    if (a<0 1 b<0){
            ^posNeg:7: error: illegal start of simple expression
  }
  ^